[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
scanner = { version = "0.1.0", path = "../scanner" }
token = { version = "0.1.0", path = "../token" }
