[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rustyline = "13.0.0"
scanner = { version = "0.1.0", path = "../scanner" }
token = { version = "0.1.0", path = "../token" }
